# tblis-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  readme.md  release-plz.toml
.github/workflows/: clippy.yml  release-plz.yml  test-tblis-rs.yml  test-tblis-src.yml
header/tblis/: tblis_config.h
header/tblis/frame/base/: thread.h
scripts/: gen_bindgen.py  util_dyload.py
tblis/: Cargo.toml  readme.md
tblis-ffi/: Cargo.toml  readme.md
tblis-ffi/src/: lib.rs
tblis-ffi/src/tblis/: dyload_compatible.rs  dyload_initializer.rs  dyload_struct.rs  ffi_base.rs  ffi_extern.rs  mod.rs
tblis-ffi/tests/: test_workable.rs
tblis-rs/: Cargo.toml  readme.md
tblis-rs/src/: alloc_vec.rs  containers.rs  einsum_impl.rs  float_trait.rs  lib.rs  tensor_ops.rs
tblis-rs/tests/: numpy_real.py  test_c64.rs  test_f64.rs
tblis-src/: Cargo.toml  build.rs  readme.md
tblis-src/external_deps/: CMakeLists.txt
tblis-src/src/: lib.rs
tblis-src/tests/: test_workable.rs
tblis/src/: alloc_vec.rs  char_parse.rs  containers.rs  einsum_impl.rs  float_trait.rs  lib.rs  ndarray_impl.rs  tensor_ops.rs  threading.rs
tblis/tests/: bench_contig.rs  bench_strided.rs  numpy_ref.py  test_c64.rs  test_f64.rs
tblis/tests/bench_result_python/: einsum_efficiency_contig.ipynb  einsum_efficiency_strided.ipynb
