[workspace]
resolver = "2"
members = ["tblis-ffi", "tblis-src"]

[workspace.package]
edition = "2024"
version = "0.1.2"
description = "TBLIS FFI bindings, wrappers and build-from-source"
repository = "https://github.com/RESTGroup/tblis-rs"
keywords = ["ffi", "chemistry", "tensor"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
num = { version = "0.4" }
libloading = { version = "0.8" }
cmake = { version = "0.1" }
