[workspace]
resolver = "2"
members = ["tblis-ffi", "tblis-rs", "tblis-src"]

[workspace.package]
edition = "2024"
version = "0.1.2"
description = "TBLIS FFI bindings, wrappers and build-from-source"
repository = "https://github.com/RESTGroup/tblis-rs"
keywords = ["ffi", "chemistry", "tensor"]
categories = ["science"]
license = "Apache-2.0"

[workspace.dependencies]
tblis-ffi = { path = "./tblis-ffi", version = "0.1.2" }
num = { version = "0.4" }
libloading = { version = "0.8" }
cmake = { version = "0.1" }
duplicate = { version = "2.0" }
derive_builder = { version = "0.20" }
opt-einsum-path = { version = "0.1" }
ndarray = { version = "0.16" }
rstest = { version = "0.26" }
