[package]
name = "tblis-ffi"
description = "FFI bindings of TBLIS"

edition.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
num = { workspace = true }
libloading = { workspace = true, optional = true }

[features]
default = []
dynamic_loading = ["dep:libloading"]

