[package]
name = "tblis-src"
description = "Crate for TBLIS Source Code"
readme = "readme.md"

edition.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[build-dependencies]
cmake = { workspace = true }

[dev-dependencies]
tblis-ffi = { path = "../tblis-ffi" }

[features]
default = []

build_from_source = []
static = []
