[package]
name = "tblis"
description = "TBLIS wrapper in Rust"
readme = "readme.md"

edition.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
tblis-ffi = { workspace = true }
duplicate = { workspace = true }
num = { workspace = true }
derive_builder = { workspace = true }
opt-einsum-path = { workspace = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
tblis-src = { workspace = true }
rayon = { workspace = true }

[features]
default = []
ndarray = ["dep:ndarray"]
dynamic_loading = ["tblis-ffi/dynamic_loading"]

[package.metadata.docs.rs]
features = ["ndarray"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
